womtool/src/test/resources/validate/wdl_draft3/invalid/required_task_input_not_defined/required_task_input_not_defined.wdl
version 1.0

workflow misses_inputs {
    input {
        Int i
    }
    call integers {input: i=i}
}

task integers {
    input {
        Int i
        Int j
    }
    command {
        echo ~{i}, ~{j}
    }
    output {String out=stdout()}
    runtime {docker: "debian:buster-slim"}
}